# Logos

./: .gitignore  README.md  docs.md  types.rs
lib/: dune  errors.ml  lexing_types.ml  lexing_utils.ml  logf.ml  mySeq.ml  shunting_yard.ml  yard_state_monad.ml
projekt/: Makefile  dune-project
projekt/lib/: lexer.mll  lexing_types.ml  lexing_utils.ml  logf.ml  shunting_yard.ml  stateMonad.ml  yard_state_monad.ml
projekt/test/example_programs/: 00_binops.lgs  01_multiple_numbers.lgs  06_scope.lgs  08_if_with_scope.lgs  17_state_monad.lgs
projekt/test/example_programs/00_simple/: 00_binops.lgs  02_lexting.lgs  03_boolean_exprs.lgs  04_simple_assignment.lgs  05_assignment_and_usage.lgs  06_scope.lgs  07_brackets.lgs  08_if_with_scope.lgs  09_simple_lambda.lgs  10_lambda_with_calling.lgs  11_lambda_with_capture.lgs  12_fibonacci.lgs  13_map.lgs  13_map.lgss  14_map_tampered.lgs  15_operation_order.lgs  16_monad.lgs  17_state_monad.lgs
projekt/test/example_programs/01_arthmetic/: 06_neq.lgs  08_gt.lgs
test/example_programs/: 02_lexting.lgs  10_lambda_with_calling.lgs  18_environment_keeping_test.lgs
