(lang dune 3.4)

(name projekt)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Szymon Jędras")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name projekt)
 (synopsis "projekt")
 (description "Projekt na Kurs programowania funkcyjnego")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
